--- a/frontend/src/Components/blogform.css
+++ b/frontend/src/Components/blogform.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Permanent+Marker&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 .content-container {
     margin-top: 50px;
 }
@@ -92,4 +92,12 @@
     justify-content: flex-end;
     flex-direction: column;
     align-items: center;
+}
+
+.result-container {
+    font-family: Roboto, sans-serif;
+}
+
+.result-container h1, .result-container h2, .result-container h3, .result-container h4, .result-container h5, .result-container h6 {
+    font-family: 'Roboto', sans-serif;
 }
